// Copyright (c) 2018 NEC Laboratories Europe GmbH.
//
// Authors: Wenting Li <wenting.li@neclab.eu>
//          Sergey Fedorov <sergey.fedorov@neclab.eu>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This package defines MinBFT protocol messages in Protobuf format.
package minbft.messages;
option go_package = "github.com/hyperledger-labs/minbft/messages/pb";

// Message represents arbitrary protocol message.
message Message{
    oneof typed {
        Hello hello = 1;
        Request request = 2;
        Reply reply = 3;
        Prepare prepare = 4;
        Commit commit = 5;
        ReqViewChange req_view_change = 6;
        ViewChange view_change = 7;
        NewView new_view = 8;
    }
}

// Hello represents HELLO message.
message Hello {
    // Replica identifier
    uint32 replica_id = 1;
}

// Request represents REQUEST message.
message Request {
    // Client identifier
    uint32 client_id = 1;

    // Request identifier (timestamp / sequence number)
    uint64 seq = 2;

    // Operation to execute on replicated state machine
    bytes operation = 3;

    // Client's signature
    bytes signature = 4;
}

// Reply represents REPLY message.
message Reply {
    // Replica identifier
    uint32 replica_id = 1;

    // Client identifier
    uint32 client_id = 2;

    // Request identifier
    uint64 seq = 3;

    // Result of requested operation execution
    bytes result = 4;

    // Replica's signature
    bytes signature = 5;
}

// Prepare represents PREPARE message.
message Prepare {
    // Replica identifier
    uint32 replica_id = 1;

    // View number
    uint64 view = 2;

    // Client's REQUEST
    Request request = 3;

    // Replica's UI
    bytes ui = 4;
}

// Commit represents COMMIT message.
message Commit {
    // Replica identifier
    uint32 replica_id = 1;

    // Primary's proposal
    Message proposal = 2;

    // Replica's UI
    bytes ui = 3;
}

// ReqViewChange represents REQ-VIEW-CHANGE message.
message ReqViewChange {
    // Replica identifier
    uint32 replica_id = 1;

    // New view number
    uint64 new_view = 2;

    // Replica's signature
    bytes signature = 3;
}

// ViewChange represents VIEW-CHANGE message.
message ViewChange {
    // Replica identifier
    uint32 replica_id = 1;

    // New view number
    uint64 new_view = 2;

    // Message log
    repeated Message log = 4;

    // View change certificate
    repeated ReqViewChange vc_cert = 5;

    // Replicas's UI
    bytes ui = 6;
}

// NewView represents NEW-VIEW message.
message NewView {
    // Replica identifier
    uint32 replica_id = 1;

    // New view number
    uint64 new_view = 2;

    // New view certificate
    repeated ViewChange nv_cert = 3;

    // Replicas's UI
    bytes ui = 4;
}
